--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "express": "^4.17.2",
+    "express-async-handler": "^1.2.0",
+    "fs": "0.0.1-security",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
